bootstrap/bootstrap-resources/templates/namespace-external-dns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
  labels:
    name: external-dns
